# students_performance_project

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  template.py
.github.com/workflows/: .gitignore
notebook/: 2. MODEL TRAINING.ipynb
src/: exception.py  logger.py
src/components/: data_ingestion.py
