[tool.poetry]
name = "students_performance_project"
version = "0.1.0"
description = "end to end ml project"
authors = ["Luis Olcay <luis.olcay@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

